--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,10 @@
     <jdk.min.version>11</jdk.min.version>
 
     <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>
+    
+  <sonar.organization>zina-alaswad-sonarsource</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+
 
     <sonar.version>9.5.0.56709</sonar.version>
     <sonar.plugin.api.version>9.8.0.203</sonar.plugin.api.version>
